Type: fix, Fixed the text contrast for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 @layer components {
-  .myLink { @apply bg-bgGradient px-3 py-2 hover:bg-[position:100%] transition-all duration-[.7s] homePhone:bg-[length:250%] rounded-sm}
+  .myLink { @apply bg-bgGradient px-3 py-2 hover:bg-[position:100%] transition-all duration-[.7s] homePhone:bg-[length:250%] rounded-lg}
 }
 
 * {
